# pyOpenLPT

./: .clangd  .gitignore  CMakeLists.txt  GUI.py  README.md  _version.py  build.py  compile_commands.json  install_linux.sh  install_mac.command  install_windows.bat  pyproject.toml  requirements.txt  setup.py  test_cam_binding.py  update_openlpt.bat  wand_points.csv
.github/workflows/: linux_build.yml  macos_build.yml  sync_to_lab.yml
Debug/: OTF_test.ipynb
build-py/: CMakeCache.txt
cmake/: bindings.cmake  ctest.cmake  openLPT.cmake
demo/openLPT_utils/: ghost_eval.py  repeat_check.py
demo/python/: demo_bubble.ipynb  demo_lpt.ipynb  demo_lpt_bubble.ipynb  demo_lpt_tracer.ipynb  visualize_otf.py
gui/: app.py  create_shortcut.py  style.qss
gui/docs/: index.html  preprocessing.html  settings.html  tracking.html
gui/docs/calibration/: plate_guide.html  wand_guide.html
gui/utils/: auto_updater.py  update_checker.py
gui/views/: image_preprocessing_view.py  results_view.py  tracking_settings_view.py  tracking_view.py
inc/: error.hpp
inc/libMath/: Camera.h  CameraUtil.h  ImageIO.h  Matrix.h  STBCommons.h  myMATH.h
inc/libObject/: BubbleRefImg.h  CircleIdentifier.h  ObjectFinder.h  ObjectInfo.h
inc/libObject/BubbleCenterAndSizeByCircle/: BubbleCenterAndSizeByCircle_data.h  BubbleCenterAndSizeByCircle_internal_types.h  BubbleCenterAndSizeByCircle_rtwutil.h  NeighborhoodProcessor.h  bwconncomp.h  chaccum.h  coder_array.h  coder_bounded_array.h  colon.h  conv2AXPYValidCMP.h  find.h  imfilter.h  imhist.h  imhmax.h  medfilt2.h  minOrMax.h  multithresh.h  nullAssignment.h  regionprops.h  rtGetInf.h  rtGetNaN.h  rt_defines.h  rt_nonfinite.h  rtwtypes.h  sort.h  sortIdx.h  sum.h  unique.h
inc/libObject/BubbleResize/: BubbleResize.h  ResizeBubble_data.h  imresize.h
inc/libSTB/: Config.h  IPR.h  OTF.h  PredField.h  STB.h  Shake.h  StereoMatch.h  Track.h  VSC.h
inc/libtiff/: tif_unix.c
inc/nanoflann/: nanoflann.hpp
modules/camera_calibration/: WAND_CALIBRATION_README.md  WAND_CALIBRATION_USER_GUIDE.html  view.py  wand_calibrator.py  wand_points_filtered.csv
modules/camera_calibration/plate_calibration/: PLATE_CALIBRATION_USER_GUIDE.html
modules/camera_calibration/wand_calibration/: WAND_CALIBRATION_README.md  WAND_CALIBRATION_USER_GUIDE.html  WAND_CALIBRATION_USER_GUIDE.md  wand_calibrator.py
modules/image_preprocessing/: __init__.py  view.py
modules/vsc/: vsc_service.py
openlpt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: main.cpp
src/pybind_OpenLPT/: pyBubbleRefImg.cpp  pyCamera.cpp  pyCircleIdentifier.cpp  pyConfig.cpp  pyIPR.cpp  pyImageIO.cpp  pyInterface.cpp  pyMatrix.cpp  pyOTF.cpp  pyObjectFinder.cpp  pyObjectInfo.cpp  pyOpenLPT.cpp  pyPredField.cpp  pySTB.cpp  pySTBCommons.cpp  pyShake.cpp  pyStereoMatch.cpp  pyTrack.cpp  pybind_utils.h  pymyMath.cpp
src/srcMath/: Camera.cpp  ImageIO.cpp  Matrix.hpp  myMATH.cpp
src/srcObject/: BubbleRefImg.cpp  CircleIdentifier.cpp  ObjectFinder.cpp  ObjectInfo.cpp
src/srcObject/BubbleCenterAndSizeByCircle/: BubbleCenterAndSizeByCircle_rtwutil.cpp  NeighborhoodProcessor.cpp  bwconncomp.cpp  chaccum.cpp  colon.cpp  conv2AXPYValidCMP.cpp  find.cpp  imfilter.cpp  imhmax.cpp  medfilt2.cpp  minOrMax.cpp  multithresh.cpp  nullAssignment.cpp  regionprops.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp  sort.cpp  sortIdx.cpp  sum.cpp  unique.cpp
src/srcObject/BubbleResize/: BubbleResize.cpp  ResizeBubble_data.cpp
src/srcSTB/: Config.cpp  IPR.cpp  IPR.hpp  OTF.cpp  PredField.cpp  PredField.hpp  STB.cpp  STB.hpp  Shake.cpp  Shake_Bubble.cpp  StereoMatch.cpp  StereoMatch_Bubble.hpp  Track.cpp  Track.hpp  VSC.cpp
test/: test_nanoflann.cpp
test/inputs/test_STB/: Bubble.m  config.txt  config_python.txt  tracerConfig.txt  untitled2.asv  untitled2.m
test/inputs/test_STB/imgFile/: cam1ImageNames.txt  cam2ImageNames.txt  cam3ImageNames.txt  cam4ImageNames.txt
test/inputs/test_STB_Bubble/: bubbleConfig.txt
test/inputs/test_nanoflann/: dist.csv  idx.csv
